VegaNotes/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veganotes
spec:
  rules:
    - host: veganotes.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: veganotes
                port: { number: 80 }
